--- a/release/changes.txt
+++ b/release/changes.txt
@@ -19,3 +19,7 @@ v.2.0.0.0
 5.	Добавлено количество для каждого BOM файла.
 6.	Отображено состояние перед и во время генерации.
 7.	Вставка процента по каждому BOM’у.
+
+v.2.0.0.1
+
+1. исправление ошибки с некорректным отображением processBar'a.
